[package]
name = "gskrm"
version = "0.1.3"
edition = "2018"
license = "MIT"
description = "gsk cnc dll wrapper"
documentation = "https://github.com/punisher1/gskrm-rs/readme.md"
homepage = "https://github.com/punisher1/gskrm-rs"
repository = "https://github.com/punisher1/gskrm-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gskrm-sys = "0.1.0"
num-traits = "0.2"
num-derive = "0.3"
num = "0.4.0"