[package]
name = "gskrm-sys"
version = "0.1.0"
links = "gskrm"
edition = "2018"
license = "MIT"
description = "gsk cnc"
documentation = "https://github.com/punisher1/gskrm-rs/readme.md"
homepage = "https://github.com/punisher1/gskrm-rs"
repository = "https://github.com/punisher1/gskrm-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registry]
default = "c"

[lib]
name = "gskrm_sys"

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
